# lib/db/src/schema/index.ts
@@ -7,3 +7,4 @@ export * from "./course_assignments";
 export * from "./archives";
 export * from "./settings";
 export * from "./deliberations";
+export * from "./messages";
